include/Win32/Physics.NewtonImport.hpp

//-- forward type declarations -----------------------------------------------
struct TNewtonFuncLinkRecord;
struct TNewtonMaterialData;
struct TNewtonCollisionMaterial;
struct TNewtonBoxParam;
struct TNewtonSphereParam;
struct TNewtonCapsuleParam;
struct TNewtonCylinderParam;
struct TNewtonConeParam;
struct TNewtonTaperedCapsuleParam;
struct TNewtonTaperedCylinderParam;
struct TNewtonChamferCylinderParam;
struct TNewtonConvexHullParam;
struct TNewtonCompoundCollisionParam;
struct TNewtonCollisionTreeParam;
struct TNewtonDeformableMeshParam;
struct TNewtonHeightFieldCollisionParam;
struct TNewtonSceneCollisionParam;
struct DECLSPEC_DRECORD TNewtonCollisionNullParam
{
};
struct TNewtonCollisionInfoRecord;
struct TNewtonJointRecord;
struct TNewtonUserMeshCollisionCollideDesc;
struct TNewtonWorldConvexCastReturnInfo;
//-- type declarations -------------------------------------------------------
typedef float Float;
typedef float dFloat;
typedef float *PFloat;
typedef float *PdFloat;
typedef int *PInteger;
typedef short *Psmallint;
typedef void * *PPointer;
typedef double dFloat64;
typedef double *PdFloat64;
typedef __int64 dLong;
typedef __int64 *PdLong;
typedef void * *PNewtonMesh;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonJoint;
typedef void * *PNewtonMaterial;
typedef void * *PNewtonCollision;
typedef void * *PNewtonSceneProxy;
typedef void * *PNewtonFracturedCompoundMeshPart;
typedef void * *PNewtonDeformableMeshSegment;
typedef void * *PNewtonAcyclicArticulation;
typedef void * *PNewtonInverseDynamics;
struct DECLSPEC_DRECORD TNewtonFuncLinkRecord
{
public:
	System::WideString function_name;
	void *function_ptr;
};
struct DECLSPEC_DRECORD TNewtonMaterialData
{
	
public:
	union
	{
		struct 
		{
			float m_float;
		};
		struct 
		{
			__int64 m_int;
		};
		struct 
		{
			void *m_ptr;
		};
		
	};
};
typedef TNewtonMaterialData *PNewtonMaterialData;
struct DECLSPEC_DRECORD TNewtonCollisionMaterial
{
public:
	__int64 m_userId;
	TNewtonMaterialData m_userData;
	System::StaticArray<TNewtonMaterialData, 6> m_userParam;
};
typedef TNewtonCollisionMaterial *PNewtonCollisionMaterial;
struct DECLSPEC_DRECORD TNewtonBoxParam
{
public:
	float m_x;
	float m_y;
	float m_z;
};
typedef TNewtonBoxParam *PNewtonBoxParam;
struct DECLSPEC_DRECORD TNewtonSphereParam
{
public:
	float m_radio;
};
typedef TNewtonSphereParam *PNewtonSphereParam;
struct DECLSPEC_DRECORD TNewtonCapsuleParam
{
public:
	float m_radio0;
	float m_radio1;
	float m_height;
};
typedef TNewtonCapsuleParam *PNewtonCapsuleParam;
struct DECLSPEC_DRECORD TNewtonCylinderParam
{
public:
	float m_radio0;
	float m_radio1;
	float m_height;
};
typedef TNewtonCylinderParam *PNewtonCylinderParam;
struct DECLSPEC_DRECORD TNewtonConeParam
{
public:
	float m_radio;
	float m_height;
};
typedef TNewtonConeParam *PNewtonConeParam;
struct DECLSPEC_DRECORD TNewtonTaperedCapsuleParam
{
public:
	float m_radio0;
	float m_radio1;
	float m_height;
};
typedef TNewtonTaperedCapsuleParam *PNewtonTaperedCapsuleParam;
struct DECLSPEC_DRECORD TNewtonTaperedCylinderParam
{
public:
	float m_radio0;
	float m_radio1;
	float m_height;
};
typedef TNewtonTaperedCylinderParam *PNewtonTaperedCylinderParam;
struct DECLSPEC_DRECORD TNewtonChamferCylinderParam
{
public:
	float m_radio;
	float m_height;
};
typedef TNewtonChamferCylinderParam *PNewtonChamferCylinderParam;
struct DECLSPEC_DRECORD TNewtonConvexHullParam
{
public:
	int m_vertexCount;
	int m_vertexStrideInBytes;
	int m_faceCount;
	float *m_vertex;
};
typedef TNewtonConvexHullParam *PNewtonConvexHullParam;
struct DECLSPEC_DRECORD TNewtonCompoundCollisionParam
{
public:
	int m_chidrenCount;
};
typedef TNewtonCompoundCollisionParam *PNewtonCompoundCollisionParam;
struct DECLSPEC_DRECORD TNewtonCollisionTreeParam
{
public:
	int m_vertexCount;
	int m_indexCount;
};
typedef TNewtonCollisionTreeParam *PNewtonCollisionTreeParam;
struct DECLSPEC_DRECORD TNewtonDeformableMeshParam
{
public:
	int m_vertexCount;
	int m_triangleCount;
	int m_vrtexStrideInBytes;
	System::Word *m_indexList;
	float *m_vertexList;
};
typedef TNewtonDeformableMeshParam *PNewtonDeformableMeshParam;
struct DECLSPEC_DRECORD TNewtonHeightFieldCollisionParam
{
public:
	int m_width;
	int m_height;
	int m_gridsDiagonals;
	int m_elevationDataType;
	float m_verticalScale;
	float m_horizonalScale_x;
	float m_horizonalScale_z;
	void *m_vertialElevation;
	System::Int8 *m_atributes;
};
typedef TNewtonHeightFieldCollisionParam *PNewtonHeightFieldCollisionParam;
struct DECLSPEC_DRECORD TNewtonSceneCollisionParam
{
public:
	int m_childrenProxyCount;
};
typedef TNewtonSceneCollisionParam *PNewtonSceneCollisionParam;
struct DECLSPEC_DRECORD TNewtonCollisionInfoRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_offsetMatrix;
	TNewtonCollisionMaterial m_collisionMaterial;
	int m_collisionType;
	int m_collisionUserID;
	
public:
	union
	{
		struct 
		{
			System::StaticArray<float, 64> m_paramArray;
		};
		struct 
		{
			TNewtonSceneCollisionParam shapedataSceneCollision;
		};
		struct 
		{
			TNewtonHeightFieldCollisionParam shapedataHeightField;
		};
		struct 
		{
			TNewtonCollisionTreeParam shapedataTree;
		};
		struct 
		{
			TNewtonCompoundCollisionParam shapedataCompound;
		};
		struct 
		{
			TNewtonDeformableMeshParam m_deformableMesh;
		};
		struct 
		{
			TNewtonConvexHullParam shapedataConvexHull;
		};
		struct 
		{
			TNewtonChamferCylinderParam shapedataChamferCylinder;
		};
		struct 
		{
			TNewtonCylinderParam shapedataCylinder;
		};
		struct 
		{
			TNewtonCapsuleParam shapedataCapsule;
		};
		struct 
		{
			TNewtonSphereParam shapedataSphere;
		};
		struct 
		{
			TNewtonConeParam shapedataCone;
		};
		struct 
		{
			TNewtonBoxParam shapedataBox;
		};
		
	};
};
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
struct DECLSPEC_DRECORD TNewtonJointRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_0;
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_1;
	System::StaticArray<float, 3> m_minLinearDof;
	System::StaticArray<float, 3> m_maxLinearDof;
	System::StaticArray<float, 3> m_minAngularDof;
	System::StaticArray<float, 3> m_maxAngularDof;
	void * *m_attachBody_0;
	void * *m_attachBody_1;
	System::StaticArray<float, 64> m_extraParameters;
	int m_bodiesCollisionOn;
	System::StaticArray<char, 128> m_descriptionType;
};
typedef TNewtonJointRecord *PNewtonJointRecord;
struct DECLSPEC_DRECORD TNewtonUserMeshCollisionCollideDesc
{
public:
	System::StaticArray<float, 4> m_boxP0;
	System::StaticArray<float, 4> m_boxP1;
	System::StaticArray<float, 4> m_boxDistanceTravel;
	int m_threadNumber;
	int m_faceCount;
	int m_vertexStrideInBytes;
	float m_skinThickness;
	void *m_userData;
	void * *m_objBody;
	void * *m_polySoupBody;
	void * *m_objCollision;
	void * *m_polySoupCollision;
	float *m_vertex;
	int *m_faceIndexCount;
	int *m_faceVertexIndex;
};
typedef TNewtonUserMeshCollisionCollideDesc *PNewtonUserMeshCollisionCollideDesc;
struct DECLSPEC_DRECORD TNewtonWorldConvexCastReturnInfo
{
public:
	System::StaticArray<float, 4> m_point;
	System::StaticArray<float, 4> m_normal;
	int m_contactID;
	void * *m_hitBody;
	float m_penetration;
};
typedef TNewtonWorldConvexCastReturnInfo *PNewtonWorldConvexCastReturnInfo;
//-- var, const, procedure ---------------------------------------------------
#define NEWTON_API L"newton32s.dll"