external/Newton/Source/NGD.NewtonImport.pas

(* Copyright (c) <2003-2020> <Julio Jerez, Newton Game Dynamics>
*
* This software is provided 'as-is', without any express or implied
* warranty. In no event will the authors be held liable for any damages
* arising from the use of this software.
*
* Permission is granted to anyone to use this software for any purpose,
* including commercial applications, and to alter it and redistribute it
* freely, subject to the following restrictions:
*
* 1. The origin of this software must not be misrepresented; you must not
* claim that you wrote the original software. If you use this software
* in a product, an acknowledgment in the product documentation would be
* appreciated but is not required.
*
* 2. Altered source versions must be plainly marked as such, and must not be
* misrepresented as being the original software.
*
* 3. This notice may not be removed or altered from any source distribution.
*)
unit NGD.NewtonImport;

// Define double to use newton in double precision
{.$DEFINE USE_DOUBLE_PRECISION}

interface
 const
{$IFDEF WIN32}
  {$IFDEF USE_DOUBLE_PRECISION}
   NEWTON_API = 'newton32d.dll';
  {$ELSE}
   NEWTON_API = 'newton32s.dll';
  {$ENDIF}
{$ENDIF}

{$IFDEF WIN64}
  {$IFDEF USE_DOUBLE_PRECISION}
   NEWTON_API = 'newton64d.dll';
  {$ELSE}
   NEWTON_API = 'newton64s.dll';
 {$ENDIF}
{$ENDIF}

type
{$IFDEF USE_DOUBLE_PRECISION}
  	  Float = Double;
     dFloat = Double;
{$ELSE}
      Float = Single;
     dFloat = Single;
{$ENDIF}

PFloat = ^Float;
PdFloat = ^dFloat;

PInteger = ^Integer;
Psmallint = ^smallint;
PPointer = ^Pointer;
dFloat64 = Double;
PdFloat64 = ^dFloat64;
dLong = Int64;
PdLong = ^dLong;

PNewtonMesh = ^Pointer;
PNewtonBody = ^Pointer;
PNewtonWorld = ^Pointer;
PNewtonJoint = ^Pointer;
PNewtonMaterial = ^Pointer;
PNewtonCollision = ^Pointer;
PNewtonSceneProxy = ^Pointer;
PNewtonFracturedCompoundMeshPart = ^Pointer;
PNewtonDeformableMeshSegment = ^Pointer;
PNewtonAcyclicArticulation = ^Pointer;
PNewtonInverseDynamics = ^Pointer;
(*
PNewtonSerializeHandle = ^Pointer;
PNewtonMeshHandle = ^Pointer;
PNewtonMeshVertex = ^Pointer;
PNewtonMeshPoint = ^Pointer;
PNewtonMeshEdge = ^Pointer;
PNewtonMeshFace = ^Pointer;
PNewtonListener = ^Pointer;
*)
TNewtonFuncLinkRecord = record
	function_name: widestring;
	function_ptr: pointer
end;
 

const 
 NEWTON_MAJOR_VERSION = 3;
 NEWTON_MINOR_VERSION = 15;
 NEWTON_BROADPHASE_DEFAULT = 0;
 NEWTON_BROADPHASE_PERSINTENT = 1;
 NEWTON_DYNAMIC_BODY = 0;
 NEWTON_KINEMATIC_BODY = 1;
 NEWTON_DYNAMIC_ASYMETRIC_BODY	= 2;
// NEWTON_DEFORMABLE_BODY	=	2;

 SERIALIZE_ID_SPHERE = 0;
 SERIALIZE_ID_CAPSULE = 1;
 SERIALIZE_ID_CYLINDER = 2;
 SERIALIZE_ID_CHAMFERCYLINDER = 3;
 SERIALIZE_ID_BOX = 4;
 SERIALIZE_ID_CONE = 5;
 SERIALIZE_ID_CONVEXHULL = 6;
 SERIALIZE_ID_NULL = 7;
 SERIALIZE_ID_COMPOUND = 8;
 SERIALIZE_ID_TREE = 9;
 SERIALIZE_ID_HEIGHTFIELD = 10;
 SERIALIZE_ID_CLOTH_PATCH = 11;
 SERIALIZE_ID_DEFORMABLE_SOLID = 12;
 SERIALIZE_ID_USERMESH = 13;
 SERIALIZE_ID_SCENE = 14;
 SERIALIZE_ID_FRACTURED_COMPOUND = 15;

 
type  
 
TNewtonMaterialData = packed record
case integer of
1: (
	m_ptr: Pointer;
);
2: (
	m_int: dLong;
);
3: (
	m_float: dFloat;
);
  end; 
PNewtonMaterialData = ^TNewtonMaterialData;

TNewtonCollisionMaterial = packed record
  m_userId: dLong;
  m_userData: TNewtonMaterialData;
  m_userParam: array[0..5] of TNewtonMaterialData;
 end;
PNewtonCollisionMaterial = ^TNewtonCollisionMaterial;

TNewtonBoxParam = packed record
  m_x: dFloat;
  m_y: dFloat;
  m_z: dFloat;
 end;
PNewtonBoxParam = ^TNewtonBoxParam;

TNewtonSphereParam = packed record
  m_radio: dFloat;
 end;
PNewtonSphereParam = ^TNewtonSphereParam;

TNewtonCapsuleParam = packed record
	m_radio0: dfloat;
	m_radio1: dfloat;
	m_height: dfloat;
end;
PNewtonCapsuleParam = ^TNewtonCapsuleParam;

TNewtonCylinderParam = packed record
	m_radio0: dfloat;
	m_radio1: dfloat;
	m_height: dfloat;
end;
PNewtonCylinderParam = ^TNewtonCylinderParam;

TNewtonConeParam = packed record
	m_radio: dfloat;
	m_height: dfloat;
end;
PNewtonConeParam = ^TNewtonConeParam;

TNewtonTaperedCapsuleParam = packed record
  m_radio0,
  m_radio1,
  m_height: dFloat;
end;
PNewtonTaperedCapsuleParam = ^TNewtonTaperedCapsuleParam;


TNewtonTaperedCylinderParam = packed record
  m_radio0,
  m_radio1,
  m_height: dFloat;
end;
PNewtonTaperedCylinderParam = ^TNewtonTaperedCylinderParam;

TNewtonChamferCylinderParam = packed record
  m_radio: dFloat;
  m_height: dFloat;
 end;
PNewtonChamferCylinderParam = ^TNewtonChamferCylinderParam;

TNewtonConvexHullParam = packed record
  m_vertexCount: Integer;
  m_vertexStrideInBytes: Integer;
  m_faceCount: Integer;
  m_vertex: PdFloat;
 end;
PNewtonConvexHullParam = ^TNewtonConvexHullParam;

TNewtonCompoundCollisionParam = packed record
	m_chidrenCount: Integer;
end;
PNewtonCompoundCollisionParam = ^TNewtonCompoundCollisionParam;

TNewtonCollisionTreeParam = packed record
	m_vertexCount: Integer;
	m_indexCount: Integer;
end;
PNewtonCollisionTreeParam = ^TNewtonCollisionTreeParam;

TNewtonDeformableMeshParam = packed record
	m_vertexCount: Integer;
	m_triangleCount: Integer;
	m_vrtexStrideInBytes: Integer;
	m_indexList: PWord;
	m_vertexList: PdFloat;
end;
PNewtonDeformableMeshParam = ^TNewtonDeformableMeshParam;

TNewtonHeightFieldCollisionParam = packed record
  m_width                 : Integer;
  m_height                : Integer; 
  m_gridsDiagonals        : Integer;
  m_elevationDataType     : Integer;// 0 = 32 bit floats, 1 = unsigned 16 bit integers
  m_verticalScale         : dFloat;
  m_horizonalScale_x      : dFloat;
  m_horizonalScale_z      : dFloat;
  m_vertialElevation      : Pointer;
  m_atributes             : PShortInt;
end;
PNewtonHeightFieldCollisionParam = ^TNewtonHeightFieldCollisionParam;

TNewtonSceneCollisionParam = packed record
  m_childrenProxyCount   : Integer;
end;
PNewtonSceneCollisionParam = ^TNewtonSceneCollisionParam;

TNewtonCollisionNullParam = packed record
end;

TNewtonCollisionInfoRecord = packed record
  m_offsetMatrix: array [0..3,0..3] of dFloat;
  m_collisionMaterial: TNewtonCollisionMaterial; 
  m_collisionType,    // tag id to identify the collision primitive
  m_collisionUserID: Integer;
  case Integer of
  	SERIALIZE_ID_BOX: (shapedataBox: TNewtonBoxParam);
	SERIALIZE_ID_CONE: (shapedataCone: TNewtonConeParam);
	SERIALIZE_ID_SPHERE: (shapedataSphere: TNewtonSphereParam);
    SERIALIZE_ID_CAPSULE: (shapedataCapsule: TNewtonCapsuleParam);
    SERIALIZE_ID_CYLINDER: (shapedataCylinder: TNewtonCylinderParam);
	//SERIALIZE_ID_TAPEREDCAPSULE: (m_taperedCapsule: TNewtonTaperedCapsuleParam);
	//SERIALIZE_ID_TAPEREDCYLINDER:	(m_taperedCylinder: TNewtonTaperedCylinderParam);
    // SERIALIZE_ID_NULL: (shapedataNull: TNewtonCollisionNullParam);
     SERIALIZE_ID_CHAMFERCYLINDER: (shapedataChamferCylinder: TNewtonChamferCylinderParam);
     SERIALIZE_ID_CONVEXHULL: (shapedataConvexHull: TNewtonConvexHullParam);
	 
	 SERIALIZE_ID_DEFORMABLE_SOLID:	(m_deformableMesh: TNewtonDeformableMeshParam);

     SERIALIZE_ID_COMPOUND: (shapedataCompound: TNewtonCompoundCollisionParam);
     SERIALIZE_ID_TREE: (shapedataTree: TNewtonCollisionTreeParam);
     SERIALIZE_ID_HEIGHTFIELD: (shapedataHeightField: TNewtonHeightFieldCollisionParam);
     SERIALIZE_ID_SCENE: (shapedataSceneCollision: TNewtonSceneCollisionParam);
	 SERIALIZE_ID_USERMESH: (m_paramArray: array[0..63] of float);
 end;
PNewtonCollisionInfoRecord = ^TNewtonCollisionInfoRecord;  

TNewtonJointRecord = packed record
	m_attachmenMatrix_0: array[0..3, 0..3] of dfloat;
	m_attachmenMatrix_1: array[0..3, 0..3] of dfloat;
	m_minLinearDof: array[0..2] of dfloat;
	m_maxLinearDof: array[0..2] of dfloat;
	m_minAngularDof: array[0..2] of dfloat;
	m_maxAngularDof: array[0..2] of dfloat;
	m_attachBody_0: pNewtonBody;
	m_attachBody_1: pNewtonBody;
	m_extraParameters: array[0..63] of dfloat;
	m_bodiesCollisionOn: Integer;
	m_descriptionType: array[0..127] of AnsiChar;
end;
PNewtonJointRecord = ^TNewtonJointRecord;

 TNewtonUserMeshCollisionCollideDesc = packed record
  m_boxP0: array [0..3] of dFloat;                      // lower bounding box of intersection query in local space
  m_boxP1: array [0..3] of dFloat;                      // upper bounding box of intersection query in local space
  m_boxDistanceTravel: array [0..3] of dFloat;          // max distance that box bpxP0 and boxP1 can travel on this timestep, used this for continue collision mode.
  m_threadNumber: Integer;                              // current thread executing this query
  m_faceCount: Integer;                                 // the application should set here how many polygons intersect the query box
  m_vertexStrideInBytes: Integer;                       // the application should set here the size of each vertex
  m_skinThickness: dFloat;                              // this is the minimum skin separation specified by the material between these two colliding shapes
  m_userData: Pointer;                                  // user data passed to the collision geometry at creation time

  m_objBody              : PNewtonBody;                  // pointer to the colliding body
  m_polySoupBody         : PNewtonBody;                  // pointer to the rigid body owner of this collision tree
  m_objCollision         : PNewtonCollision;             // collision shape of the colliding body, (no necessarily the collision of m_objBody)
  m_polySoupCollision    : PNewtonCollision;             // collision shape of teh collsion tree, (no necessarily the collision of m_polySoupBody)
  m_vertex               : PdFloat;                 // the application should set here the pointer to the global vertex of the mesh.
  m_faceIndexCount       : PInteger;                // the application should set here the pointer to the vertex count of each face.
  m_faceVertexIndex      : PInteger;                // the application should set here the pointer index array for each vertex on a face.
													// the format of a face is I0, I1, I2, I3, ..., M, N, E0, E1, E2, ..., A
                                                	// I0, I1, I2, .. are the indices to the vertex, relative to m_vertex pointer
		                                        	// M is the index to the material sub shape id
													// N in the index to the vertex normal relative to m_vertex pointer
													// E0, E1, E2, ... are the indices of the the face normal that is shared to that face edge, when the edge does not share a face normal then the edge index is set to index N, which the index to the face normal    
													// A is and estimate of the largest diagonal of the face, this used internally as a hint to improve floating point accuracy and algorithm performance. 
 end;
 PNewtonUserMeshCollisionCollideDesc = ^TNewtonUserMeshCollisionCollideDesc;
 
 
 TNewtonWorldConvexCastReturnInfo = Packed Record
   m_point: array [0..3] of dFloat;              // collision point in global space
   m_normal: array [0..3] of dFloat;             // surface normal at collision point in global space
   //m_normalOnHitPoint: array [0..3] of dFloat; // surface normal at the surface of the hit body,
                                                 // is the same as the normal calculated by a ray cast hitting the body at the hit point
   m_contactID: Integer;                         // collision ID at contact point
   m_hitBody: PNewtonBody;                        // body hit at contact point
   m_penetration: dFloat;                        // contact penetration at collision point
 end;
 PNewtonWorldConvexCastReturnInfo = ^TNewtonWorldConvexCastReturnInfo;
